<resources>
    <string name="app_name">Simple Bank</string>
    <string name="login_title">Log In akun Simple Bankmu</string>
    <!--login page-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="login">Log In</string>
    <string name="biometric">Biometrik</string>

    <string name="prompt_info_title">Konfirmasi Fingerprint</string>
    <string name="prompt_info_subtitle">Sentuh sensor sidik jari</string>
    <string name="prompt_info_use_app_password">Batalkan</string>
    <!--End login page-->
    <!--Beranda-->
    <string name="home_page">Beranda</string>
    <string name="account_mutation">Mutasi</string>
    <string name="title_account_mutation">Mutasi Rekening</string>
    <string name="qris_title">QRIS</string>
    <string name="profile_title">Profil</string>
    <string name="Hey">Hai, </string>
    <string name="user_full_name">M Nur Setiawan</string>
    <string name="helpdesk">Pusat Bantuan</string>
    <string name="balance_title">Saldo Anda</string>
    <string name="number_account">Rek. %s</string>
    <string name="balance_amount">Rp. 100.000.000</string>
    <string name="income_title">Pemasukan</string>
    <string name="income_amount">Rp. 50.000.000,00</string>
    <string name="expense_title">Pengeluaran</string>
    <string name="expense_amount">Rp. 20.000.000,00</string>
    <string name="change_account">Ganti rekening lain</string>
    <string name="digital_service_title">Layanan Digital</string>
    <string name="digital_service_search">Cari layanan</string>
    <string name="cash_withdrawal_title">Tarik tunai</string>
    <string name="cash_deposit_title">Setor tunai</string>
    <string name="transfer_title">Transfer</string>
    <string name="virtual_account_title">Virtual account</string>
    <string name="gold_tube_title">Tabung emas</string>
    <string name="pay_title">Bayar</string>
    <string name="top_up_e_wallet_title">Top Up e wallet</string>
    <string name="etc_title">Lain-Lain</string>
    <!--End Beranda-->
    <!--Profile-->
    <string name="card_holder_name_title">Card Holder Name</string>
    <string name="card_holder_name">Adilla Wulandari</string>
    <string name="expired_date_title">Expired Date</string>
    <string name="expired_date">10/28</string>
    <string name="card_information">Informasi Kartu Simple Bank</string>
    <string name="account_type_title">Jenis Rekening</string>
    <string name="account_type">Deposito</string>
    <string name="account_owner_title">Nama Pemilik</string>
    <string name="account_owner">Adilla Wulandari</string>
    <string name="account_number_title">Nomor Rekening</string>
    <string name="account_number">37376565</string>
    <string name="full_account_number">373 76565 98213 567</string>
    <string name="censored_account_number">**********</string>
    <string name="account_setting_title">Pengaturan Kartu</string>
    <string name="logout">Logout</string>
    <string name="whoops">Whoops!!!!</string>
    <string name="logout_question">Apakah Anda benar benar ingin Logout dari akun anda?</string>
    <string name="back">Kembali</string>
    <!--End profile-->

    <string name="another_bank">Bank lain</string>
    <string name="fellow_banks">Sesama BCA</string>
    <string name="favorite_transaction_title">Transaksi Favorite</string>
    <string name="favorite_transaction_account_number">2101210210</string>
    <string name="favorite_transaction_account_name">BCA Mch. Yusuf</string>
    <string name="last_transaction_title">Transaksi Terakhir</string>
    <string name="last_transaction_account_number">2101210210</string>
    <string name="last_transaction_account_name">BCA Mch. Yusuf</string>
    <string name="choose_source_account_title">Pilih Rekening Sumber</string>
    <string name="choose_destination_account_title">Pilih Bank Tujuan</string>
    <string name="enter_account_data_title">Masukkan rekening</string>
    <string name="enter_account_data">Nomor Rekening</string>
    <string name="choose_amount_title">Pilih Jumlah</string>
    <string name="choose_amount">Jumlah</string>
    <string name="enter_description_title">Masukkan Keterangan</string>
    <string name="enter_description">Keterangan</string>
    <string name="choose_withdraw_line_title">Pilih Jalur Tarik Tunai</string>
    <string name="enter_nominal_title">Masukkan nominal</string>
    <string name="enter_nominal">Nominal</string>
    <string name="next_title">Selanjutnya</string>
    <string name="choose_e_wallet_title">Pilih e wallet</string>
    <string name="choose_e_wallet">Pilih E Wallet</string>
    <string name="enter_number_account_title">Masukkan Nomor</string>
    <string name="enter_number_account">Nomor Rekening</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_activity_home">HomeActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="balance_format">%s</string>
    <string name="hide_balance">IDR. *****</string>
    <string name="show_more">Tampilkan lebih</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="apakah_anda_benar_benar_ingin_logout_dari_akun_anda">Apakah Anda benar-benar ingin logout dari akun Anda?</string>
    <string name="actionButtonLabel">Iya</string>
    <string name="dismisButtonLabel">Tidak</string>


    <!--Talkback Profile-->
    <string name="talkback_profile">Profil</string>
    <string name="talkback_profile_simple_bank">Simple Bank</string>
    <string name="talkback_profile_balance_hide">********</string>
    <string name="talkback_profile_balance_btn_show">Lihat</string>
    <string name="talkback_profile_balance_bnt_hide">Sembunyikan</string>
    <string name="talkback_profile_card_holder_name">Nama Pemilik Kartu</string>
    <string name="talkback_profile_card_expired_date">Tanggal Kadaluarsa</string>
    <string name="talkback_profile_master_card">Logo Master Card</string>
    <string name="talkback_profile_simple_bank_card_information">Informasi Kartu Simple Bank</string>
    <string name="talkback_profile_account_type">Jenis Rekening</string>
    <string name="talkback_profile_deposit">Deposito</string>
    <string name="talkback_profile_holder_name">Nama Pemilik</string>
    <string name="talkback_profile_title_account_number">Nomor Rekening</string>
    <string name="talkback_profile_card_setting">Pengaturan Kartu</string>
    <string name="talkback_profile_logout">Keluar</string>
    <string name="talkback_profile_btn_copy">Salin Nomor Rekening</string>
    <string name="talkback_profile_btn_account_setting">Masuk ke pengaturan akun</string>
    <string name="destination_bank_and_account_number">%s - %s</string>

    <!--bagian virtual account-->


    <!--    Transfer-->
    <string name="timeResultFormat">%s %s</string>

    <!--  Talkback Transfer  -->
    <string name="talkback_btn_back">Kembali</string>
    <string name="talkback_title_transfer">Transfer</string>
    <string name="talkback_title_add_new_account">Daftar baru</string>
    <string name="talkback_find_no_account">Cari rekening</string>
    <string name="talkback_title_no_account_saved">Rekening Tersimpan</string>
    <string name="talkback_btn_transfer">Transfer</string>
    <string name="talkback_spinner_choose_account">Pilih rekening</string>
    <string name="talkback_title_bank_destination">Pilih bank tujuan</string>
    <string name="talkback_input_bank">Pilih Bank</string>
    <string name="talkback_title_input_destination_no_account">Masukkan Rekening Tujuan</string>
    <string name="talkback_input_destination_no_account">No Rekening</string>
    <string name="talkback_title_description">Keterangan</string>
    <string name="talkback_input_description">Keterangan</string>
    <string name="talkback_btn_save_no_account">Simpan rekening</string>
    <string name="talkback_btn_next">Selanjutnya</string>
    <string name="talkback_destination_no_account">Rekening Tujuan</string>
    <string name="talkback_title_input_nominal">Masukkan Nominal</string>
    <string name="talkback_title_warning_input_nominal">Minimal transfer Rp.10.000</string>
    <string name="talkback_title_input_description">Masukkan Keterangan</string>
    <string name="talkback_title_page_confirmation_transfer">Konfirmasi Transfer</string>
    <string name="talkback_title_no_account_sourced">Rekening Sumber</string>
    <string name="talkback_title_no_account_destination">Rekening Tujuan</string>
    <string name="talkback_title_nominal">Nominal</string>
    <string name="talkback_title_admin_fee">Biaya Admin</string>
    <string name="talkback_title_total_transfer">Total Transfer</string>
    <string name="talkback_title_pin_transaction">PIN Transaksi</string>





    <!--    spinner -->
    <string-array name="months_array">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>

    <string-array name="transaction_types_array">
        <item>Semua Transaksi</item>
        <item>Pemasukan</item>
        <item>Pengeluaran</item>
    </string-array>

</resources>