<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.team1.simplebank.ui.home.HomeFragment"
        android:label="@string/home_page"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_account_mutation"
        android:name="com.team1.simplebank.ui.account_mutation.AccountMutationFragment"
        android:label="@string/account_mutation"
        tools:layout="@layout/fragment_account_mutation" />

    <fragment
        android:id="@+id/navigation_qris"
        android:name="com.team1.simplebank.ui.qris.QrisFragment"
        android:label="@string/qris_title"
        tools:layout="@layout/fragment_qris" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.team1.simplebank.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>