<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/global_background"
    tools:context=".ui.ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:padding="24dp"
            android:background="@drawable/purple_gradient">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/simple_bank_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/logo"
                android:layout_width="28dp"
                android:layout_height="33dp"
                android:src="@drawable/simple_bank_logo_icon"
                app:layout_constraintBottom_toBottomOf="@id/simple_bank_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/simple_bank_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/full_account_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/censored_account_number"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@id/simple_bank_title"
                app:layout_constraintBottom_toTopOf="@id/card_holder_name_title"
                app:layout_constraintTop_toBottomOf="@id/simple_bank_title" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/full_account_number"
                app:layout_constraintTop_toTopOf="@id/full_account_number"
                app:layout_constraintBottom_toBottomOf="@id/full_account_number"
                android:background="@android:color/transparent"
                android:src="@drawable/show_or_hide"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/card_holder_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_holder_name_title"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/card_holder_name"
                app:layout_constraintStart_toStartOf="@id/card_holder_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/card_holder_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_holder_name"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/expired_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expired_date_title"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/card_holder_name"
                app:layout_constraintEnd_toStartOf="@id/mastercard_logo"
                app:layout_constraintBottom_toTopOf="@id/expired_date"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/expired_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expired_date"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/expired_date_title"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/mastercard_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mastercard_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/card_view"
        app:layout_constraintStart_toEndOf="@id/card_view"
        app:layout_constraintBottom_toBottomOf="@id/card_view"
        android:background="@android:color/transparent"
        android:src="@drawable/arrow_right_circle"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/card_information_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_information"
        android:textSize="16sp"
        android:layout_marginTop="50dp"
        android:textColor="@color/blue_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/account_type_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/account_type_title"
        android:layout_width="wrap_content"
        android:text="@string/account_type_title"
        app:layout_constraintTop_toBottomOf="@id/card_information_title"
        app:layout_constraintStart_toStartOf="@id/card_information_title"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/account_type"
        android:layout_width="wrap_content"
        android:text="@string/account_type"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@id/account_name"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/account_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/account_owner_title"
        app:layout_constraintStart_toStartOf="@id/card_information_title"
        app:layout_constraintTop_toBottomOf="@id/account_type_title"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/account_name"
        android:layout_width="wrap_content"
        android:text="@string/card_holder_name"
        app:layout_constraintTop_toTopOf="@id/account_name_title"
        app:layout_constraintBottom_toBottomOf="@id/account_name_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/account_number_title"
        android:layout_width="wrap_content"
        android:text="@string/account_number_title"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/account_name_title"
        app:layout_constraintStart_toStartOf="@id/card_information_title"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/account_number"
        android:layout_width="wrap_content"
        android:text="@string/account_number"
        android:textStyle="bold"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@id/btn_copy_account_number"
        app:layout_constraintBottom_toBottomOf="@id/btn_copy_account_number"
        app:layout_constraintEnd_toStartOf="@id/btn_copy_account_number"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_copy_account_number"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/copy_icon"
        android:layout_marginTop="6dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/account_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/account_setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_setting_title"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/blue_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_number_title"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/account_setting_title"
        android:background="@android:color/transparent"
        android:src="@drawable/blue_icon"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/red_rounded_corner"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        app:cornerRadius="12dp"
        style="@style/button_logout_color"
        android:text="@string/logout"
        android:textSize="16sp"
        app:icon="@drawable/arrow_rounded_left"
        app:iconSize="25dp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>